add conviction page

--- a/uims/src/main/resources/templates/convictions.html
+++ b/uims/src/main/resources/templates/convictions.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>All Users</title>
+    <title>All Convictions</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -16,18 +16,15 @@
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Personal No</th>
-            <th>Address</th>
+            <th>Description</th>
+            <th>Date</th>
+
         </tr>
         </thead>
         <tbody>
-        <tr th:each="user : ${allUsers}">
-            <td th:text="${user.getFirstName()}"></td>
-            <td th:text="${user.getLastName()}"></td>
-            <td th:text="${user.getPersonalNo()}"></td>
-            <td th:text="${user.getAddress()}"></td>
+        <tr th:each="conviction : ${convictions}">
+            <td th:text="${conviction.getDate()}"></td>
+            <td th:text="${conviction.getDescription()}"></td>
         </tr>
         </tbody>
     </table>
