--- a/uims/src/main/resources/templates/user-page.html
+++ b/uims/src/main/resources/templates/user-page.html
@@ -31,6 +31,10 @@
         </tr>
         </tbody>
     </table>
+    <br>
+
+        <a th:href="'/convictions/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Convictions</a>
+
 </div>
 </body>
 </html>
