--- a/uims/src/main/resources/templates/add_new_user.html
+++ b/uims/src/main/resources/templates/add_new_user.html
@@ -34,6 +34,7 @@
                         <label class="form-label">Personal Number</label>
                         <input type="text" th:field="*{personalNo}" id="personalNumber" class="form-control"
                                placeholder="Personal Number"/>
+                        <h6 th:text="${errorMessage}" class="text-danger"></h6>
                     </div>
 
                     <div class="form-outline mb-4">
