--- a/uims/src/main/resources/templates/convictions.html
+++ b/uims/src/main/resources/templates/convictions.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container my-2">
-    <h1>User List</h1>
+    <h1>Conviction List</h1>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
@@ -28,6 +28,8 @@
         </tr>
         </tbody>
     </table>
+
+    <a th:href="'/convictions/user/' + ${user.getPersonalNo() + '/add_new_conviction'}" class="btn btn-primary btn-sm mb-3">Add Conviction</a>
 </div>
 </body>
 </html>
