--- a/uims/src/main/resources/templates/user-page.html
+++ b/uims/src/main/resources/templates/user-page.html
@@ -34,7 +34,7 @@
     <br>
 
         <a th:href="'/convictions/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Convictions</a>
-
+        <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Health Cares</a>
 </div>
 </body>
 </html>
