--- a/uims/src/main/resources/templates/convictions.html
+++ b/uims/src/main/resources/templates/convictions.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <div class="container my-2">
-    <h1>Conviction List</h1>
+    <h1 th:text="'Convictions of ' + ${personFullName}"></h1>
+
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
@@ -30,6 +31,7 @@
     </table>
 
     <a th:href="'/convictions/user/' + ${user.getPersonalNo() + '/add_new_conviction'}" class="btn btn-primary btn-sm mb-3">Add Conviction</a>
+    <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
 </div>
 </body>
 </html>
