--- a/uims/src/main/resources/templates/health_care.html
+++ b/uims/src/main/resources/templates/health_care.html
@@ -29,6 +29,8 @@
             </tbody>
         </table>
         <br>
+        <a th:href="'/health-care/add-health-care/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add health-care</a>
+        <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
     </div>
 </body>
 </html>
