--- a/uims/src/main/resources/templates/convictions.html
+++ b/uims/src/main/resources/templates/convictions.html
@@ -30,7 +30,7 @@
         </tbody>
     </table>
 
-    <a th:href="'/convictions/user/' + ${user.getPersonalNo() + '/add_new_conviction'}" class="btn btn-primary btn-sm mb-3">Add Conviction</a>
+    <a th:href="'/convictions/add_new_conviction/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add Conviction</a>
     <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
 </div>
 </body>
