make input fields required

--- a/uims/src/main/resources/templates/add_migration.html
+++ b/uims/src/main/resources/templates/add_migration.html
@@ -21,19 +21,19 @@
                     <div class="form-outline mb-4">
                         <label class="form-label">From</label>
                         <input type="text" th:field="*{fromCountry}" id="from" class="form-control"
-                               placeholder="From"/>
+                               placeholder="From" required/>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label">To</label>
                         <input type="text" th:field="*{toCountry}" id="to" class="form-control"
-                               placeholder="To"/>
+                               placeholder="To" required/>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label">Date</label>
                         <input type="date" th:field="*{date}" id="date" class="form-control"
-                               placeholder="Date"/>
+                               placeholder="Date" required/>
                     </div>
 
                     <div>
