--- a/uims/src/main/resources/templates/add_new_conviction.html
+++ b/uims/src/main/resources/templates/add_new_conviction.html
@@ -21,12 +21,12 @@
         <div class="form-outline mb-4">
           <label class="form-label">Description</label>
           <input type="text" th:field="*{description}" id="description" class="form-control"
-                 placeholder="Description "/>
+                 placeholder="Description " required/>
         </div>
 
         <div class="form-outline mb-4">
           <label class="form-label">Date</label>
-          <input type="date" th:field="*{date}" id="date" class="form-control"/>
+          <input type="date" th:field="*{date}" id="date" class="form-control" required/>
         </div>
 
         <div>
