--- a/uims/src/main/resources/templates/add_new_healthcare.html
+++ b/uims/src/main/resources/templates/add_new_healthcare.html
@@ -21,19 +21,19 @@
                 <div class="form-outline mb-4">
                     <label class="form-label">Hospital</label>
                     <input type="text" th:field="*{hospital}" id="hospital" class="form-control"
-                           placeholder="Hospital"/>
+                           placeholder="Hospital" required/>
                 </div>
 
                 <div class="form-outline mb-4">
                     <label class="form-label">Date</label>
                     <input type="date" th:field="*{date}" id="date" class="form-control"
-                           placeholder="Date"/>
+                           placeholder="Date" required/>
                 </div>
 
                 <div class="form-outline mb-4">
                     <label class="form-label">Description</label>
                     <input type="text" th:field="*{description}" id="description" class="form-control"
-                           placeholder="Description"/>
+                           placeholder="Description" required/>
                 </div>
 
                 <div>
