make add user input fields required

--- a/uims/src/main/resources/templates/view_all_users.html
+++ b/uims/src/main/resources/templates/view_all_users.html
@@ -31,6 +31,7 @@
         </tr>
         </tbody>
     </table>
+    <a href="/users/add-user/" class="btn btn-primary btn-sm mb-3">Add User</a>
 </div>
 </body>
 </html>
