--- a/uims/src/main/resources/templates/add_new_user.html
+++ b/uims/src/main/resources/templates/add_new_user.html
@@ -21,26 +21,26 @@
                     <div class="form-outline mb-4">
                         <label class="form-label">First Name</label>
                         <input type="text" th:field="*{firstName}" id="firstName" class="form-control"
-                               placeholder="First Name"/>
+                               placeholder="First Name" required/>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label">Last Name</label>
                         <input type="text" th:field="*{lastName}" id="lastName" class="form-control"
-                               placeholder="Last Name"/>
+                               placeholder="Last Name" required/>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label">Personal Number</label>
                         <input type="text" th:field="*{personalNo}" id="personalNumber" class="form-control"
-                               placeholder="Personal Number"/>
+                               placeholder="Personal Number" required/>
                         <h6 th:text="${errorMessage}" class="text-danger"></h6>
                     </div>
 
                     <div class="form-outline mb-4">
                         <label class="form-label">Address</label>
                         <input type="text" th:field="*{address}" id="address" class="form-control"
-                               placeholder="Address"/>
+                               placeholder="Address" required/>
                     </div>
 
                     <div>
