add Bank account

--- a/uims/src/main/resources/templates/user-page.html
+++ b/uims/src/main/resources/templates/user-page.html
@@ -35,6 +35,7 @@
 
         <a th:href="'/convictions/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Convictions</a>
         <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Health Cares</a>
+        <a th:href="'/bank-accounts/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Bank Accounts</a>
 </div>
 </body>
 </html>
