--- a/uims/src/main/resources/templates/user-page.html
+++ b/uims/src/main/resources/templates/user-page.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container my-2">
-    <h1>User with given personalNo</h1>
+    <h1 th:text="${personFullName}"></h1>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
@@ -36,6 +36,9 @@
         <a th:href="'/convictions/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Convictions</a>
         <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Health Cares</a>
         <a th:href="'/bank-accounts/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Bank Accounts</a>
+        <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Transactions</a>
+        <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Deports</a>
+        <a th:href="'/health-care/user/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Migrations</a>
 </div>
 </body>
 </html>
