--- a/uims/src/main/resources/templates/view_all_users.html
+++ b/uims/src/main/resources/templates/view_all_users.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container my-2">
-    <h1>User List</h1>
+    <h1>All Users List</h1>
     <table class = "table table-striped table-responsive-md">
         <thead>
         <tr>
