add Bank account

--- a/uims/src/main/resources/templates/login.html
+++ b/uims/src/main/resources/templates/login.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <section class="container-fluid">
+        <a href="/" class="btn btn-primary">Home Page</a>
         <div class="row justify-content-center py-5">
             <div class="col-6 rounded-3 my-form-container">
                 <h3 class="text-center my-5 text-secondary">Log In</h3>
@@ -38,6 +39,7 @@
                     </div>
                 </form>
             </div>
+
         </div>
     </section>
 </body>
