--- a/uims/src/main/resources/templates/convictions.html
+++ b/uims/src/main/resources/templates/convictions.html
@@ -29,9 +29,9 @@
         </tr>
         </tbody>
     </table>
-
     <a th:href="'/convictions/add_new_conviction/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add Conviction</a>
     <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
+    <h6 th:text="${noPermission}" class="text-danger"></h6>
 </div>
 </body>
 </html>
