--- a/uims/src/main/resources/templates/index.html
+++ b/uims/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container my-2">
-    <a href="/users" class="btn btn-primary btn-sm mb-3">All Users</a>
+
 
     <h2>Search User By Personal No</h2>
     <h6 th:text="${errorMessage}" class="text-danger"></h6>
@@ -20,6 +20,11 @@
         <input class="form-control mb-4 col-4" placeholder="Personal No" id="txtSearch" name="personalNo" type="text">
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
+    <br>
+    <br>
+    <a href="/users" class="btn btn-primary btn-sm mb-3">All Users</a>
+    <h6 th:text="${noPermission}" class="text-danger"></h6>
+    <a href="/login" class="btn btn-primary">Log in as Admin</a>
 </div>
 </body>
 </html>
