add transaction staff

--- a/uims/src/main/resources/templates/add_new_conviction.html
+++ b/uims/src/main/resources/templates/add_new_conviction.html
@@ -16,7 +16,7 @@
 <section class="container-fluid">
   <div class="row justify-content-center py-5">
     <div class="col-6 rounded-3 my-form-container">
-      <h3 class="text-center my-5 text-secondary">Add New User</h3>
+      <h3 class="text-center my-5 text-secondary">Add New Conviction</h3>
       <form method="post" th:action="@{/convictions}" th:object="${conviction}" class="px-md-2">
         <div class="form-outline mb-4">
           <label class="form-label">Description</label>
