--- a/uims/src/main/resources/templates/migrations.html
+++ b/uims/src/main/resources/templates/migrations.html
@@ -28,6 +28,9 @@
             </tr>
             </tbody>
         </table>
+        <a th:href="'/migrations/add-migration/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add Migration</a>
+        <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
+
         <br>
     </div>
 </body>
