--- a/uims/src/main/resources/templates/migrations.html
+++ b/uims/src/main/resources/templates/migrations.html
@@ -30,7 +30,7 @@
         </table>
         <a th:href="'/migrations/add-migration/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add Migration</a>
         <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
-
+        <h6 th:text="${noPermission}" class="text-danger"></h6>
         <br>
     </div>
 </body>
