--- a/uims/src/main/resources/templates/health_care.html
+++ b/uims/src/main/resources/templates/health_care.html
@@ -31,6 +31,7 @@
         <br>
         <a th:href="'/health-care/add-health-care/' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">Add health-care</a>
         <a th:href="'/users/personalNo?personalNo=' + ${user.getPersonalNo()}" class="btn btn-primary btn-sm mb-3">View User</a>
+        <h6 th:text="${noPermission}" class="text-danger"></h6>
     </div>
 </body>
 </html>
