--- a/uims/src/main/resources/templates/migrations.html
+++ b/uims/src/main/resources/templates/migrations.html
@@ -15,9 +15,9 @@
         <table class = "table table-striped table-responsive-md">
             <thead>
             <tr>
-                <th>Hospital</th>
                 <th>From</th>
                 <th>To</th>
+                <th>Date</th>
             </tr>
             </thead>
             <tbody>
